BUG 4976 : 解决图片轮播多次添加图片在微信接口

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -179,7 +179,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
                         <div class="clearfix pt10 pb10">
                             <div class="fl">
                                 <div class="xui-user">
-                                    <img src="{% if review.user_icon %}{{ review.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" alt="">
+                                    <img data-allow-autoplay=false src="{% if review.user_icon %}{{ review.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" alt="">
                                 </div>
                                 <span class="xa-memberName">
                                     {% autoescape off %}
