分享设置，提示 ：finish

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -60,7 +60,7 @@
             padding-top: 5px;
 
         }
-        .xui-outerFunctionTrigger{
+        .xui-outerFunctionTrigger,.groupHelp_tip{
             margin-left: 5px;
         }
     </style>
