1、【BDD】云商通整合-首页-经营概况 2、【BDD】云商通整合-首页-店铺提醒 3、去掉权限管理入口 4、解决日清子账号登录系统时的bug 5、首草定制渠道扫码 6、解决首页店铺提醒 点击退款中搜索区订单状态没有正常显示的bug

--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -96,7 +96,11 @@
 			<select id="orderStatus" name="orderStatus" class="w120 m0">
 				<option value="-1">全部</option>
 				{{each(i, status) statuses}}
-				<option value="${status.value}" data-value="${status.value}" data-name="${status.name}">${status.name}</option>
+					{{if status.value == orderStatus}}
+						<option value="${status.value}" data-value="${status.value}" data-name="${status.name}" selected="selected">${status.name}</option>
+					{{else}}
+						<option value="${status.value}" data-value="${status.value}" data-name="${status.name}">${status.name}</option>
+					{{/if}}
 				{{/each}}
 			</select>
 		</div>
