--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -394,7 +394,8 @@ $(document).ready(function() {
 		el: ".xa-orderFilterView",
 		dataView: $('[data-ui-role="advanced-table"]').data('view'),
 		userWebappId: {{user.get_profile.webapp_id}},
-		status:status
+		status:status,
+		orderStatus:{{order_status}}
 	});
 	filterBox.$el.bind('end_click', function(){
 		// $('#start_date').val('');
@@ -800,17 +801,6 @@ $(document).ready(function() {
 	$('body').delegate('.xa-buyerHintImg','mouseleave',function(){
 		$('.xa-buyerHintDropBox').hide();
 	});
-
-	//处理来自“微商城-首页-待发货订单-更多”过来的查看待发货订单的请求 duhao 20150917
-	var orderStatus = '{{order_status}}';
-	if(orderStatus === '3') {
-		_.delay(function(){
-			console.log(orderStatus)
-			$("#orderStatus").val("3");
-		}, 700);
-
-	}
-
 });
 </script>
 {% endblock %}
