--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -16,7 +16,7 @@
 		</div>
 		<span class="xui-systemName"></span>
 		<div class="xui-headerActionBar">
-			<a href="/auth/account_help/get/"><i class="xui-toolIcon"></i>权限管理</a>
+			<!-- <a href="/auth/account_help/get/"><i class="xui-toolIcon"></i>权限管理</a> -->
 			<a href="javascript:void(0);" data-toggle="popover" id="mf"><i class="xui-toolIcon"></i>修改密码</a>
 			<!-- <a href="#"><i class="xui-toolIcon"></i>系统通知</a>
 			<a href="#"><i class="xui-toolIcon"></i>帮助中心 </a> -->
