--- a/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
+++ b/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
@@ -7,8 +7,16 @@
   .xui-editProductPage .control-label{
     margin-left: 10px;
   }
+  .xui-create-redEnvelope-page .imageView-uploadZone{
+      position: relative;
+      top: -30px;
+  }
   .xui-create-redEnvelope-page .uploadify{
-    height:90px!important;
+    height:30px!important;
+    margin-bottom: 0!important;
+  }
+  .xui-create-redEnvelope-page .swfupload{
+    height:30px!important;
     margin-bottom: 0!important;
   }
   .xui-create-redEnvelope-page .uploadify-button{
@@ -16,31 +24,35 @@
     border: 1px dashed #e5e5e5;
     background-size: 91px 91px;
     width:90px!important;
-    height:90px!important;
+    height:30px!important;
     box-shadow: none;
   }
-  .xui-create-redEnvelope-page .uploadify-button:after,
-  .xui-create-redEnvelope-page .uploadify-button:before{
-    content:"";
-    display: inline-block;
-    background: #e5e5e5;
-    position: absolute;
+  .xui-create-redEnvelope-page .uploadify-button{
+      border: 0;
+      background-color:rgba(0,0,0,0.5);
   }
-  .xui-create-redEnvelope-page .uploadify-button:after{
-    left:24px;
-    top:45px;
-    width:45px;
-    height:3px;
-
-  }
-  .xui-create-redEnvelope-page .uploadify-button:before{
-    left:45px;
-    top:25px;
-    width:3px;
-    height:45px;
-  }
+{#  .xui-create-redEnvelope-page .uploadify-button:after,#}
+{#  .xui-create-redEnvelope-page .uploadify-button:before{#}
+{#    content:"";#}
+{#    display: inline-block;#}
+{#    background: #e5e5e5;#}
+{#    position: absolute;#}
+{#  }#}
+{#  .xui-create-redEnvelope-page .uploadify-button:after{#}
+{#    left:24px;#}
+{#    top:45px;#}
+{#    width:45px;#}
+{#    height:3px;#}
+{##}
+{#  }#}
+{#  .xui-create-redEnvelope-page .uploadify-button:before{#}
+{#    left:45px;#}
+{#    top:25px;#}
+{#    width:3px;#}
+{#    height:45px;#}
+{#  }#}
   .xui-create-redEnvelope-page .uploadify-button-text{
-    color:transparent;
+    color:#fff;
   }
   .xui-imgTips{
     position: absolute;
@@ -121,7 +133,7 @@
           &nbsp;&nbsp;<span class="hidden"><a href="">修改</a>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#969a9d;">库存：</span></span>
            <p class="xa-couponTip xui-couponTip hidden">当库存为0时用户将无法获取优惠券</p>
           <div class="errorHint" data-error-hint="请选择奖励" style="display: inline-block;"></div>
-          <div class="xui-i-help pt5 xa-couponHelp" style="margin-left: 120px;">只能选择"每人限领"为"不限"的优惠卷</div>
+          <div class="xui-i-help pt5 xa-couponHelp" style="margin-left: 120px;">只能选择"每人限领"为"不限"的优惠券</div>
         {% endif %}
       </div>
     </div>
@@ -186,7 +198,7 @@
         </div>
     </div>
     <div class="form-group h40">
-        <label class="control-label col-sm-2 col-sm-offset-1 w110" style="color:#000;">奖励条件</label>
+        <label class="control-label col-sm-2 col-sm-offset-1 w110">奖励条件</label>
         订单<span style="color:#cf0404;">满</span>
         <input type="text" class="form-control w70" id="limit_money" name="limit_money" value="{{red_envelope_rule.limit_order_money}}" data-validate="norequire,,require-positive-int"/>元
         <span class="xui-i-help ml5">注：空为不限制</span>
@@ -212,7 +224,7 @@
             <label for="" class="control-label col-sm-2 col-sm-offset-1 pt0 w110">分享图片</label>
             <p class="xui-imgTips">注：不上传为使用默认图片<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;推荐尺寸:90*90，仅支持jpg,png&nbsp;&nbsp;<i class="xa-tips">?</i></p>
             <input type="hidden" name="share_pic" id="share_pic" value="{% if red_envelope_rule.share_pic %}{{red_envelope_rule.share_pic }}{% else %}/static_v2/img/editor/redEnv.jpg{% endif %}" data-ui-role="image-selector" data-width="90" data-height="90"/>
-            <div data-ui-role="image-selector-view" auto-show-help="false" style="margin-left: 120px;">
+            <div data-ui-role="red-image-selector-view" auto-show-help="false" style="margin-left: 120px;">
             </div>
             <div class="errorHint"></div>
         </div>
@@ -263,7 +275,10 @@ $(document).ready(function(){
       var $input = $(e.target);
       if($input.prop('checked')){
           $input.siblings().prop("checked", false);
-          $('input[name="limit_money"]').removeAttr('disabled');
+          var $limit_money = $('input[name="limit_money"]');
+          $limit_money.parent().removeClass('xui-i-help');
+          $limit_money.prev().css('color','#cf0404');
+          $limit_money.removeAttr('disabled');
       }
   });
     //图文领取
@@ -271,7 +286,11 @@ $(document).ready(function(){
       var $input = $(e.target);
       if($input.prop('checked')){
           $input.siblings().prop("checked", false);
-          $('input[name="limit_money"]').attr('disabled', 'disabled');
+          var $limit_money = $('input[name="limit_money"]');
+          $limit_money.parent().addClass('xui-i-help');
+          $limit_money.prev().css('color','#8F8F8F');
+          $limit_money.attr('disabled', 'disabled');
+          $limit_money.val('');
       }
   });
 
