--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -119,13 +119,13 @@
 <div class="wui-SignPageDiv">
     <div class="wui-TopPaneDiv">
         <div class="wui-UserPhotoDiv">
-            <div class="wui-UserPhotoCircle">
-                <img src="/termite_static/img/component/sign/defaultHead.jpg">
+            <div class="wui-UserPhotoCircle wa-user-icon">
+                <img src="/static/img/user-1.jpg">
             </div>
         </div>
-        <div class="wui-UserName Chr"><p>用户名</p></div>
+        <div class="wui-UserName Chr wa-username"><p>用户名</p></div>
         <div class="wui-UserPointDiv">
-            <p class="wui-UserPoint Chr">积分:<span class="wui-TotalPoints Chr">0</span></p>
+            <p class="wui-UserPoint Chr">积分:<span class="wui-TotalPoints Chr wa-user-integral">0</span></p>
         </div>
         <div class="wui-Rules Border">
             <div class="wui-Rules Chr">活动规则<span class="fa fa-chevron-circle-right"></span></div>
@@ -135,7 +135,7 @@
 
     <div class="wui-BodyPaneDiv">
         <div class="wui-SignDiv">
-            <div class="wui-SignCircle">
+            <div class="wui-SignCircle wa-sign-btn">
                 <div class="wui-SignSign"><p class="wui-SignChr">签到</p></div>
             </div>
         </div>
