--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -5,58 +5,226 @@
 	h1 {
 		color: #00F;
 	}
-	.xui-record {
-		margin: 10px 15px;
-		padding: 5px;
-		box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-		border-radius: 5px;
-	}
+
 	.xui-record .xui-inner-content {
 		color: #8F8F8F;
 	}
-	a.xui-button {
-		padding: 10px;
-		display: block;
-		text-align: center;
-		color: #FFF;
-		margin: 10px 15px;
-		background-color: rgba(0, 125, 255, 0.5);
-		border-radius: 10px;
-	}
+
+    .wui-mask{
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        opacity: 0.8 !important;
+        background: black;
+        height: 100%;
+        width: 100%;
+    }
+
+    .wui-resultDialog{
+        background: white;
+        display: none;
+        position: fixed;
+        top: 20%;
+        left: 5%;
+        width: 90%;
+        border-radius: 5px;
+        z-index: 2;
+    }
+    .wui-resultDialog>.wui-i-header>.wui-i-title{
+        margin-top: 30px;
+        margin-left: 25px;
+        font-size: 1.5em;
+        font-weight: 200;
+        overflow: visible;
+        color: #0090d6;
+    }
+    .wui-resultDialog>.wui-i-close{
+        background: white;
+        color: dimgrey;
+        border-radius: 30px;
+        height: 30px;
+        width: 30px;
+        float: right;
+        margin-top: -10px;
+        margin-right: -10px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 33px;
+        font-size: 1.2rem;
+    }
+    .wui-resultDialog>.wui-i-header, .wui-resultDialog>.wui-i-body, .wui-resultDialog>.wui-i-bottom{
+        width: 100%;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .wui-resultDialog>.wui-i-body, .wui-resultDialog .integral, .wui-resultDialog .coupon{
+        display: none;
+    }
+    .wui-resultDialog .wui-i-dialog-btn{
+        height: 35px;
+        background: #d81c26;
+        border: 0;
+        font-size: 1rem;
+        font-weight: bolder;
+        border-radius: 3px;
+        width: 170px;
+        display: block;
+        margin: 10px auto;
+    }
+    .wui-resultDialog>.wui-i-bottom>.wui-i-closeDialog{
+        color: white;
+        background: #0090D6;
+    }
+    .wui-resultDialog .wui-i-contentHeader{
+        font-size: 1.2rem;
+        color: #454545;
+        margin: 5px 25px;
+    }
+    .wui-resultDialog .wui-i-content button{
+        width: 70px;
+        color: white;
+        background: #d81c26;
+    }
 </style>
 {% endblock %}
 
 {% block content-panel %}
-
+    {{ page_html_content|safe }}
+    <div id="resultDialog" class="wui-resultDialog">
+        <b class="wui-i-close xa-closeDialog">&#10005</b>
+        <div class="wui-i-header">
+            <h2 class="wui-i-title xa-dialog-title">签到活动未开始！</h2>
+        </div>
+        <div class="wui-i-body xa-dialog-content">
+            <div class="wui-i-contentHeader xa-dialog-contentHeader">本次签到奖励</div>
+            <div class="wui-i-content xa-entity-content">
+                <p class="integral">
+                    积分：<span></span>
+                </p>
+                <p class="coupon">
+                    优惠券：<span></span>
+                </p>
+            </div>
+        </div>
+        <div class="wui-i-bottom xa-dialog-bottom">
+            <button type="button" class="wui-i-dialog-btn wui-i-closeDialog xa-closeDialog xa-closeBtn">知道了</button>
+        </div>
+    </div>
 {% endblock %}
 
 {% block js %}
 <script type="text/javascript">
 	W.pageId = "{{request.GET.page_id}}";
-	$(document).ready(function() {
-		$('.xa-join').click(function(event) {
-			event.stopPropagation();
-			event.preventDefault();
-			var $link = $(event.currentTarget);
-			var id = $link.attr('data-id');
-			var tel = $.trim($('[name="tel"]').val());
-			W.getApi().call({
-				app: 'm/apps/sign',
-				resource: 'sign_participance',
-				method: 'put',
-				args: {
-					woid: W.webappOwnerId,
-					belong_to: id,
-					tel: tel
-				},
-				success: function(data) {
-					alert('参与成功');
-				},
-				error: function(data) {
-					alert('参与失败');
-				}
-			})
-		});
+    var member_info = JSON.parse(JSON.stringify("{{ member_info }}"));
+    console.log(member_info);
+    var status = "{{ activity_status }}";
+    var resultDialog;
+
+    function ResultDialog(selector){
+        var that = this;
+        this.$el = $(selector || '#resultDialog');
+        this.$title = this.$el.find('.xa-dialog-title');
+        this.$dialogContent = this.$el.find('.xa-dialog-content');
+        this.$contentHeader = this.$el.find('.xa-dialog-contentHeader');
+        this.$entityContent = this.$el.find('.xa-entity-content');
+        this.$userCenter = this.$el.find('.xa-userCenter');
+        this.$closeBtn = this.$el.find('.xa-closeBtn');
+        this.$integral = this.$el.find('.integral');
+        this.$coupon = this.$el.find('.coupon');
+
+
+        this.$userCenter.on('click', function(){
+            if (!W.isMember) {
+                $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
+                        '<img height="205px" width="205px" src="'+ W.qrcodeUrl+'">' +
+                        '</div><div></div>');
+            }
+            else {
+                window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
+            }
+
+        });
+        //初始化result dialog
+        this.$mask = $('<div class="wui-mask"></div>');
+        this.$mask.on('click', function(){
+            that.close();
+        });
+        $('body').append(this.$mask);
+        this.$el.find('.xa-closeDialog').on('click',function(){
+            that.close();
+        });
+    }
+    ResultDialog.prototype.render = function(status, data){
+        if(status){
+            this.$title.text('签到成功！');
+            if(data.integral){
+                this.$integral.text(data.integral).show();
+            }else if(data.coupon){
+                if(data.coupon.status){
+                    this.$coupon.text(data.coupon.content).show();
+                }else{
+                    this.$entityContent.html('奖励已领完');
+                }
+            }
+            this.$dialogContent.show();
+        }
+        this.$mask.show();
+        this.$el.show();
+    };
+    ResultDialog.prototype.close = function(){
+        this.$mask.hide();
+        this.$el.hide();
+    };
+
+	$(function() {
+        resultDialog = new ResultDialog();
+        //绑定签到按钮点击事件
+        $('.wa-sign-btn').on('click', function(){
+            if('未开始' === status){
+                resultDialog.show();
+            }else{
+                resultDialog.render(true, {});
+            }
+        });
+        //从后台获取数据
+        W.getApi().call({#}
+            app: 'm/apps/sign',
+            resource: 'sign_participance',
+            method: 'get',
+            args: {
+                owner_id: W.webappOwnerId
+            },
+            success: function(data) {
+                alert('参与成功');
+            },
+            error: function(data) {
+                alert('参与失败');
+            }
+        });
+{#		$('.xa-join').click(function(event) {#}
+{#			event.stopPropagation();#}
+{#			event.preventDefault();#}
+{#			var $link = $(event.currentTarget);#}
+{#			var id = $link.attr('data-id');#}
+{#			var tel = $.trim($('[name="tel"]').val());#}
+{#			W.getApi().call({#}
+{#				app: 'm/apps/sign',#}
+{#				resource: 'sign_participance',#}
+{#				method: 'put',#}
+{#				args: {#}
+{#					woid: W.webappOwnerId,#}
+{#					belong_to: id,#}
+{#					tel: tel#}
+{#				},#}
+{#				success: function(data) {#}
+{#					alert('参与成功');#}
+{#				},#}
+{#				error: function(data) {#}
+{#					alert('参与失败');#}
+{#				}#}
+{#			})#}
+{#		});#}
 	});
 </script>
 {% endblock %}
