微页面 商品会员价的修改， 抽出gmu

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -82,6 +82,7 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopSideNav.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/integralMechanism.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/productsPrice.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/crypto-js.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/md5.js"></script>
