--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -57,6 +57,34 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
+    // 计算列表页面价钱
+    $('.xui-products-original').calculProductMemberPriceOrPromotionPrice({
+        fmt: $('body').data('value'),
+        updateProductPrice: function(event, data){
+            var _this = this;
+            if(data.count != 0) {
+                $('.xa-shoppingCartCount').text(data.count).removeClass("hidden");
+                $('.xa-shopCarCount').text(data.count).show();
+            }
+
+            $(".xa-product").each(function(){
+                // 商品原价
+                var price = $(this).data('product-price').toFixed(2);
+                // 商品有促销
+                var productPromotion = $(this).data('product-promotion');
+                var isMemberProduct = $(this).hasClass('xa-member-product');
+                // 计算价钱                
+                price = _this.calculPrice({
+                    price: price,
+                    productPromotion: productPromotion,
+                    isMemberProduct: isMemberProduct
+                });
+                // 设置显示价格
+                $(this).find('.xt-productPrice').text('￥'+price);
+            });
+        }
+    });
+/*
     var fmt = $('body').data('value');
     var user_has_promotion = function(user_member_grade_id, promotion_member_grade_id){
         if(promotion_member_grade_id == '0'){return true;}
@@ -113,6 +141,7 @@ $(document).ready(function() {
 
         }
     });
+*/
     var $img = $('.xui-inner-img img');
     var imgHeight = $img.css('width');
     $img.css('height', imgHeight);
