--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -273,8 +273,15 @@
 <div class="xui-mlkActivityPage">
     <div class="xui-blackPlaceholder"></div>
     <div class="xui-activeBtn f16">
-        <div class="xui-voteBtn xa-voteBtn">帮<span class="xui-name">王明王明不知道啦</span>拉票</div>
-        <div class="xui-participationBtn xa-participationBtn">我也要参加</div>
+        {% if self_visit %}
+            
+            <div class="xui-participationBtn xa-participationBtn">我也要参加</div>
+            <div class="xui-voteBtn xa-voteBtn">{% if member_voted %}已{% endif %}帮<span class="xui-name">{{vote_member.username_truncated}}</span>拉票</div>
+        {% else %}
+
+            <div class="xui-voteBtn {% if member_voted %}{% else %}xa-voteBtn{% endif %}">{% if member_voted %}已{% endif %}帮<span class="xui-name">{{vote_member.username_truncated}}</span>拉票</div>
+            <div class="xui-participationBtn  {% if joined %}{% else %}xa-participationBtn{% endif %}"> {% if joined %}您已参加活动{% else %}我也要参加{% endif %}</div>
+        {% endif %}
     </div>
     <div class="xui-hint f12">收集票数进入前50名，即可获得儿童安全坐垫</div>
     <div class="xui-activityRules">
@@ -315,12 +322,14 @@
     <div class="xui-rankingList">
         <div class="xui-activityTitle f16 mb0">得票排行榜</div>
         <ul class="xui-i-list">
+            {% for mileke in milekes %}
             <li>
                 <i class="f12 fl">1</i>
-                <img src="/static_v2/img/thumbnails_vote.png" alt="" class="xui-img fl">
-                <span class="xui-name f12 fl">叶良辰</span>
-                <span class="xui-ticketNum fr f12 c3">共获得<span class="xui-num">4000</span>票</span>
+                <img src="{{ mileke.member.user_icon }}" alt="" class="xui-img fl">
+                <span class="xui-name f12 fl">{{ mileke.member.username_truncated }}</span>
+                <span class="xui-ticketNum fr f12 c3">共获得<span class="xui-num">{{mileke.current_count}}</span>票</span>
             </li>
+            {% endfor %}
             <li>
                 <i class="f12 fl">2</i>
                 <img src="/static_v2/img/thumbnails_vote.png" alt="" class="xui-img fl">
@@ -342,7 +351,7 @@
             <li></li>
         </ul>
     </div>
-    <div class="xui-myRanking f13 none">
+        <div class="xui-myRanking f13 {% if not joined %} none {% endif %}">
         <div class="fl">我的排名：第<span class="xui-myNum">251名</span></div>
         <div class="fr">共获得<span class="xui-myNum">2600</span>票</div>
     </div>
@@ -357,30 +366,64 @@
         <div class="xui-closeBtn xa-closeBtn"></div>
     </div>
 </div>
-<div class="xui-share xa-share">
+<div class="xui-share xa-share1 none">
     <div class="xui-colseButton xui-spritebg xa-colseButton"></div>
 </div>
 {% endblock %}
 
 {% block js %}
 <script type="text/javascript">
+    var self_visit = "{{self_visit}}";
+    var is_sub = "{{member.is_subscribed}}";
     $(document).ready(function(){
-        $('body').swipeMask('show');
+        // $('body').swipeMask('show');
         $('.xa-voteBtn').click(function(){
-            $('body').swipeMask('show');
+            W.getApi().call({
+                app: 'webapp',
+                api: 'project_api/call',
+                method: 'get',
+                args: {
+                    woid: W.webappOwnerId,
+                    module: 'user_center',
+                    target_api: 'mileke_log/record',
+                    fid: '{{url_fid}}'
+                },
+                success: function(data) {
+                   $('body').swipeMask('show');
+                   $('.xa-attention').removeClass('none');
+                },
+                error: function(data) {
+                    // $('.xa-loading').addClass('hidden');
+                    $('body').alert({
+                        isShow: true,
+                        info: data['data']['msg'],
+                        speed:2000
+                });
+            }
+            });
+
         });
-        $('.mask').click(function(){
-            $('body').swipeMask('hide');
-        });
+        // $('.mask').click(function(){
+        //     $('body').swipeMask('hide');
+        // });
         $('.xa-closeBtn').click(function(){
             $('.xa-attention').hide();
             $('body').swipeMask('hide');
         });
         $('.xa-colseButton').click(function(){
-            $('.xa-share').hide();
+            $('.xa-share1').hide();
             $('body').swipeMask('hide');
         });
-    });
 
+        $('.xa-participationBtn').click(function(){
+            if (self_visit == 'True' && is_sub == 'True'){
+                $('.xa-share1').removeClass('none');
+                $('body').swipeMask('show');
+            } else {
+                $('.xa-attention').removeClass('none');
+                $('body').swipeMask('show');
+            }
+        });
+    });
 </script>
 {% endblock %}
