--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/mileke_page.html
@@ -404,11 +404,11 @@
         //     $('body').swipeMask('hide');
         // });
         $('.xa-closeBtn').click(function(){
-            $('.xa-attention').hide();
+            $('.xa-attention').addClass('none');
             $('body').swipeMask('hide');
         });
         $('.xa-colseButton').click(function(){
-            $('.xa-share1').hide();
+            $('.xa-share1').addClass('none');
             $('body').swipeMask('hide');
         });
 
